[project]
name = "crewai_impl"
version = "0.1.0"
description = "crewai-impl using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
crewai_impl = "crewai_impl.main:run"
run_crew = "crewai_impl.main:run"
train = "crewai_impl.main:train"
replay = "crewai_impl.main:replay"
test = "crewai_impl.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
